Install shadcn/ui and necessary requirement + add path setting in tsconfig.* to fix problem with typescript popup issues

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,5 +22,12 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  // ...shadcn-ui config
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["./src/*"]
+  },
+  "allowSyntheticDefaultImports": true,
+  "moduleResolution": "node"
 }
